<resources>
    <string name="app_name">PT +</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content">"Lorem Ipsum is simply dummy text of the printing and typesetting industry.       Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown       printer took a galley of type and scrambled it to make a type specimen book.       It has survived not only five centuries, but also the leap into electronic       typesetting, remaining essentially unchanged. It was popularised in the       1960s with the release of Letraset sheets containing Lorem Ipsum passages,       and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.       Lorem Ipsum is simply dummy text of the printing and typesetting industry.       Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown       printer took a galley of type and scrambled it to make a type specimen book.       It has survived not only five centuries, but also the leap into electronic       typesetting, remaining essentially unchanged. It was popularised in the       1960s with the release of Letraset sheets containing Lorem Ipsum passages,       and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.   "</string>
    <string name="Home">home</string>
    <string name="explore">Search </string>
    <string name="store">Store</string>
    <string name="centers">Centers</string>
    <string name="account">Account</string>
    <string name="activities">Activities</string>
    <string name="see_all">See All</string>
    <string name="trainers">Trainers</string>
    <string name="select">Select</string>
    <string name="my_booking_history">Booking History</string>
    <string name="my_order_history">Order History</string>
    <string name="saved_address">Saved Address</string>
    <string name="favorites">Favorites</string>
    <string name="add_address">Add Address</string>
    <string name="chat_history">Chat History</string>
    <string name="card_details">Card Details</string>
    <string name="gallery">Gallery</string>
    <string name="logout">Logout</string>
    <string name="shop_by_category">Shop By Category</string>
    <string name="shop_bestsellers">Shop Bestsellers</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="filter_by_rating">Filter By Rating</string>
    <string name="filter_by_location">Filter By Location</string>
    <string name="filter_more">Filter More</string>
    <string name="all">All</string>
    <string name="contact_me">Contact Me</string>
    <string name="status">Status</string>
    <string name="available">Available</string>
    <string name="specialities">Specialities</string>
    <string name="_12_more_specialities">12 More Specialities</string>
    <string name="select_plan">Select Plan</string>
    <string name="favorite_products">Favorite Products</string>
    <string name="description">Description</string>
    <string name="reviews">Reviews</string>
    <string name="read_all_reviews">Read all reviews</string>
    <string name="location">Location</string>
    <string name="book_now">BOOK NOW</string>
    <string name="select_training_plan">Select Training Plan</string>
    <string name="cancel">Cancel</string>
    <string name="products">Products</string>
    <string name="Centers">Centers</string>
    <string name="Trainers">Trainers</string>
    <string name="Top">Top</string>
    <string name="home">Home</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact Us</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="login">Login</string>
    <string name="login_out">Logout</string>
    <string name="language">Language</string>
    <string name="help">Help</string>
    <string name="my_center_booking_history">My Center Booking History</string>
    <string name="my_account">My Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="centers_category">Centers Category</string>
    <string name="clasess">Clasess</string>
    <string name="buy_now">BUY NOW</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="follow_us">Follow Us</string>
    <string name="directly_chat_with_us_on_whatsapp">Directly Chat with us on WhatsApp</string>
    <string name="directly_chat_with_us">Directly Chat with us</string>
    <string name="notifications">Notifications</string>
    <string name="country">Country</string>
    <string name="currency">Currency</string>
    <string name="change">Change</string>
    <string name="login_page">Login</string>
    <string name="login_now">LOGIN NOW</string>
    <string name="please_enter_the_details_below_to_continue">Please enter the details below to continue.</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_i_have_an_account">Don\'t I have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="mobile">Mobile</string>
    <string name="date_of_birth">DOB</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="related_products">Related Products</string>
    <string name="in_stock">In stock</string>
    <string name="cart">Cart</string>
    <string name="order_info">Order Info</string>
    <string name="sub_total">Sub Total</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="total">Total</string>
    <string name="remove">Remove</string>
    <string name="check_out">Check Out</string>
    <string name="delivery">Delivery</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="schedule">Schedule</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="sorry_there_is_no_shipping_address">Sorry, There is no shipping address</string>
    <string name="normal_delivery_24_hours">Normal Delivery 24 hours</string>
    <string name="express_delivery_in_4_hours">Express Delivery in 4 hours</string>
    <string name="payment_methode">Payment Methode</string>
    <string name="you_can_pay_with_your_knet_card">You can pay with your Knet card</string>
    <string name="you_can_pay_with_mater_visa_card">You can pay with Mater, Visa card</string>
    <string name="pay_now">PAY NOW</string>
    <string name="booking_history">Booking History</string>
    <string name="view">View</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="address">Address</string>
    <string name="price">Price</string>
    <string name="order_history">Order History</string>
    <string name="track_order">Track Order</string>
    <string name="qty">qty : </string>
    <string name="order_on">Order on: </string>
    <string name="my_addresses">My Addresses</string>
    <string name="booking">Booking</string>
    <string name="plan">Plan</string>
    <string name="gallery_q">Gallery</string>
    <string name="video">Video</string>
    <string name="photos">Photos</string>
    <string name="Yes">Yes</string>
    <string name="are_you_sure_to_log_out">Are you sure you want to Logout ?</string>
    <string name="No">No</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="gender">Gender</string>
    <string name="area">Area</string>
    <string name="street_name">Street Name / Number</string>
    <string name="home_apartment_building">Home / Apartment / Building</string>
    <string name="my_profile">My Profile</string>
    <string name="choose_date_of_birth">Choose Date of Birth</string>
    <string name="update">UPDATE</string>
    <string name="state">State</string>
    <string name="appoinment">Appoinment</string>
    <string name="choose_your_date_amp_time"><![CDATA[Choose Your date & Time]]></string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="next">Next</string>
    <string name="success">SUCCESS !</string>
    <string name="check_details">Check Details</string>
    <string name="thank_you_for_choosing_our_services_and_trust_our_trainer_to_help_and_make_and_healthy">Thank you for choosing our services and trust our trainer to help and make and healthy</string>
    <string name="failed">" Failed !"</string>
    <string name="your_booking_has_been_failed_choosing_our_services">Your Booking has been failed choosing our services</string>
    <string name="filter">Filter</string>
    <string name="apply">APPLY</string>
    <string name="payment_successful">Payment Successful !</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="order_id">Order ID</string>
    <string name="you_have_successfully_placed_your_order_a_confirmation_message_has_been_sent_to_you_via_e_mail">You have successfully placed your order. A confirmation message has been sent to you via e mail.</string>
    <string name="payment_failed">Payment Failed !</string>
    <string name="your_payment_has_been_failed_you_have_entered_wrong_security_code">Your Payment has been Failed. You have entered wrong Security Code</string>
    <string name="thank_you_for_choosing_our_services_and_trust_our_center_to_help_and_make_and_healthy">Thank you for choosing our services and trust our center to help and make and healthy</string>
    <string name="filter_by_activity">Filter By Activity</string>
    <string name="filter_by_availability">Filter By Availability</string>
    <string name="filter_by_indoor_outdoor">Filter By Indoor/ Outdoor</string>
    <string name="filter_by_training_type">Filter By Training Type</string>
    <string name="filter_by">Filter by</string>
    <string name="work_experience_years">Work Experience (years)</string>
    <string name="filter_by_price">Filter by price</string>
    <string name="sort_by_category">Sort by category</string>
    <string name="clear">CLEAR</string>
    <string name="Male">male</string>
    <string name="Female">female</string>
    <string name="Home_a">home</string>
    <string name="Office">work</string>
    <string name="Other">other</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_the_email_associated_with_your_account_and_we_will_send_an_email_with_instructions_to_reset_your_password">Enter the mobile number associated with your account and we will send an otp for verification</string>
    <string name="continue_a">continue</string>
    <string name="we_have_sent_a_password_recover_instructions_to_your_email">We have Sent a otp to your mobile number.</string>
    <string name="otp">OTP</string>
    <string-array name="days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="haven_t_received_an_email_yet">Haven\'t received an otp yet?</string>
    <string name="create_new_password">Create new password</string>
</resources>