<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".Activitys.ActivityLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >

            <include
                android:id="@+id/appbar"
                layout="@layout/appbar_layout_back_with_title" />


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_margin="@dimen/standard_35"
                    android:layout_marginTop="@dimen/standard_20"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@drawable/logo" />

                    <TextView
                        style="@style/fontBold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/login_now"
                        android:textColor="@color/white"
                        android:textSize="24dp" />

                    <TextView
                        android:layout_marginTop="@dimen/standard_20"
                        style="@style/fontBold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/please_enter_the_details_below_to_continue"
                        android:textColor="@color/white"
                        android:textSize="14dp" />

                    <LinearLayout
                        android:layout_marginTop="@dimen/standard_105"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="vertical">

                        <TextView
                            style="@style/fontBold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/email_id"
                            android:textColor="@color/white"
                            android:textSize="12dp" />

                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/grey_text_color"

                            android:textColor="@color/white" />

                        <TextView

                            style="@style/fontBold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/password"
                            android:textColor="@color/white"
                            android:textSize="12dp" />

                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:backgroundTint="@color/grey_text_color"
                            android:textColor="@color/white"
                            android:drawableEnd="@drawable/password_show"
                            app:passwordToggleEnabled="true" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <CheckBox
                            android:buttonTint="@color/grey_text_color"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".5"
                            android:text="@string/remember_me"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/txt_forgot_password"
                            style="@style/fontBold"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:layout_weight=".5"
                            android:gravity="end|center_vertical"
                            android:text="@string/forget_password"
                            android:textColor="@color/white"
                            android:textSize="12dp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/standard_35"
                        android:background="@drawable/product_qty_controle"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:id="@+id/lnr_register"
                        android:layout_marginTop="@dimen/standard_35"
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            style="@style/fontBold"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/don_t_i_have_an_account"
                            android:textColor="@color/grey_text_color"
                            android:textSize="12dp" />
                        <TextView
                            style="@style/fontBold"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/register_now"
                            android:textColor="@color/white"
                            android:textSize="12dp" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>