<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >

            <include
                android:id="@+id/appbar"
                layout="@layout/appbar_layout_back_with_title" />


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_margin="@dimen/standard_35"
                    android:layout_marginTop="@dimen/standard_20"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@drawable/logo" />

                    <TextView
                        style="@style/fontBold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/register_now"
                        android:textColor="@color/white"
                        android:textSize="24dp" />



                    <LinearLayout
                        android:layout_marginTop="@dimen/standard_35"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/fontBold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/name"
                            android:textColor="@color/white"
                            android:textSize="12dp" />

                        <EditText
                            android:id="@+id/et_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/grey_text_color"

                            android:textColor="@color/white" />
                        <TextView
                            android:layout_marginTop="@dimen/standard_5"
                            style="@style/fontBold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/e_mail"
                            android:textColor="@color/white"
                            android:textSize="12dp" />

                        <EditText
                            android:id="@+id/et_email"
                            android:inputType="textEmailAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/grey_text_color"

                            android:textColor="@color/white" />
                        <TextView
                            android:layout_marginTop="@dimen/standard_5"
                            style="@style/fontBold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/mobile"
                            android:textColor="@color/white"
                            android:textSize="12dp" />

                        <EditText
                            android:id="@+id/et_mob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/grey_text_color"

                            android:textColor="@color/white" />
                        <TextView
                            android:layout_marginTop="@dimen/standard_5"
                            style="@style/fontBold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/date_of_birth"
                            android:textColor="@color/white"
                            android:textSize="12dp" />

                        <EditText
                            android:id="@+id/et_dob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/grey_text_color"
android:focusable="false"
                            android:textColor="@color/white" />

                        <TextView
                            android:layout_marginTop="@dimen/standard_5"
                            style="@style/fontBold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/password"
                            android:textColor="@color/white"
                            android:textSize="12dp" />

                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/grey_text_color"
                            android:textColor="@color/grey_text_color"
                            android:drawableEnd="@drawable/password_show"
                            app:passwordToggleEnabled="true" />

                        <TextView

                            android:layout_marginTop="@dimen/standard_5"
                            style="@style/fontBold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/confirm_password"
                            android:textColor="@color/white"
                            android:textSize="12dp" />

                        <EditText
                            android:drawableEnd="@drawable/password_show"
                            android:id="@+id/et_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/grey_text_color"
                            android:textColor="@color/white"
                            app:passwordToggleEnabled="true" />
                    </LinearLayout>



                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/standard_35"
                        android:background="@drawable/product_qty_controle"
                        android:gravity="center"
                        android:text="@string/register"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:id="@+id/lnr_login"
                        android:layout_marginTop="@dimen/standard_35"
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            style="@style/fontBold"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/already_have_an_account"
                            android:textColor="@color/grey_text_color"
                            android:textSize="12dp" />
                        <TextView
                            style="@style/fontBold"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            android:textSize="12dp" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>